# Neuro-code

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cazador.aq  certificacion_real.neuro  install.sh  reporte_auditoria.json  test_api.neuro  test_base.nc  test_definitivo.neuro  test_error.neuro  test_funciones.nc  test_ollama.rs  test_ops.nc  test_parser_error.nc
docs/: PLAN_POTENCIA.md  guia-sintaxis.md  ia.md  stdlib.md
extras/: math_lib.aq
playground/: Cargo.toml  index.html
proyecto_aquila/: README.md  index.html  main.aq  ventas.db
proyecto_neurocode/: README.md  main.neuro
src/: ast.rs  base_datos.rs  depredactor.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  servidor.rs  stdlib.rs  tests.rs
tests/: ai_test.nx  bench_fib.aq  bench_fib.neuro  bench_fib.py  benchmark_python.py  compat_basico.neuro  compat_depredactor.neuro  compat_guardian.neuro  compat_ia.neuro  compat_json.neuro  compat_modulos.neuro  debug_groq.py  eval_correctitud.aq  eval_correctitud.neuro  eval_depredactor.neuro  eval_framework.aq  eval_framework.neuro  eval_ia_config.neuro  eval_json.neuro  eval_neuro_alias.neuro  eval_numeros.neuro  eval_rendimiento.aq  eval_rendimiento.neuro  eval_servidor.neuro  eval_stdlib.neuro  monitor_servidor.nx  phase6_test.nx  phase7_test.nx  selenium_server.aq  selenium_server.neuro  stress_test.nx  test_db.aq  test_db.neuro  test_db_broken.aq  test_fixer.aq  test_global_auth.aq  test_http_pokeapi.aq  test_ia_ollama.aq  test_ia_universal.neuro  test_imposible.aq  (+7 more)
tests_archive/: ai_proxy.aq  aquila_power_test.aq  benchmark_python.py  (+33 more)
(+49 files in other folders)
