[package]
name = "aquila"
version = "2.1.0"
edition = "2024"
authors = ["Juan Manuel Peralta"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.23.3", features = ["auto-initialize"] }
ureq = { version = "2", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
indicatif = "0.17"
