[package]
name = "neurocode"
version = "1.0.0"
description = "El lenguaje de programación AI-nativo para la automatización y el desarrollo en español."
edition = "2024"
authors = ["Juan Manuel Peralta"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.23.3", features = ["auto-initialize"] }
ureq = { version = "2", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
indicatif = "0.17"
